Fix some spacing issues

--- a/css/hud.css
+++ b/css/hud.css
@@ -17,6 +17,9 @@ body {
 
 #display_container {
     width: 77.5%;
+    position: absolute;
+    left: 0px;
+    padding-left: .5em;
 }
 
 #hud {
